--- a/seckill/pom.xml
+++ b/seckill/pom.xml
@@ -11,7 +11,7 @@
   <dependencies>
       <dependency>
          <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
+         <artifactId>test2 test2</artifactId>
          <version>4.12-beta-3</version>
          <scope>test</scope>
       </dependency>
